@@ -1,3 +1,7 @@
+trunk
+=====
+* added mxErrorPool() function.  R documentation is coming soon.
+
 Release 1.0.0-1448 (September 30, 2010)
 =======================================
 * added missing entries to demo 00INDEX file
